src/test/deca/context/valid/created/add-int-float.deca

//Description :
// Test d'une addition avec int à gauche
//
// Resultats :
// Erreur


{
    float f = 1 + 1.0;
}
