src/test/deca/context/invalid/created/field-call-int.deca
//Description :
// Test d'un appel d'attribut
//
// Resultats :
// Erreur

{
    int a = 3;
    a.a;
}
